--- a/configs/General.config
+++ b/configs/General.config
@@ -20,6 +20,45 @@ CONFIG_KERNEL_ZRAM_BACKEND_LZ4=y
 CONFIG_KERNEL_ZRAM_BACKEND_LZO=y
 CONFIG_KERNEL_ZRAM_DEF_COMP_LZ4=y
 
+#Docker核心
+CONFIG_PACKAGE_dockerd=y
+CONFIG_PACKAGE_containerd=y
+CONFIG_PACKAGE_runc=y
+CONFIG_PACKAGE_tini=y
+#网络（必须）
+CONFIG_PACKAGE_kmod-veth=y
+CONFIG_PACKAGE_kmod-bridge=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-nf-conntrack=y
+CONFIG_PACKAGE_kmod-nf-nat=y
+CONFIG_PACKAGE_kmod-ipt-core=y
+CONFIG_PACKAGE_kmod-ipt-nat=y
+#存储（overlay2）
+CONFIG_PACKAGE_kmod-fs-overlay=y
+#Cgroup（必须）
+CONFIG_KERNEL_CGROUPS=y
+CONFIG_KERNEL_MEMCG=y
+CONFIG_KERNEL_CGROUP_PIDS=y
+CONFIG_KERNEL_CGROUP_DEVICE=y
+#Namespace（必须）
+CONFIG_KERNEL_NAMESPACES=y
+CONFIG_KERNEL_USER_NS=y
+CONFIG_KERNEL_PID_NS=y
+CONFIG_KERNEL_NET_NS=y
+CONFIG_KERNEL_IPC_NS=y
+CONFIG_KERNEL_UTS_NS=y
+#关键内核功能
+CONFIG_KERNEL_SECCOMP=y
+CONFIG_KERNEL_SECCOMP_FILTER=y
+CONFIG_KERNEL_OVERLAY_FS=y
+CONFIG_KERNEL_VETH=y
+CONFIG_KERNEL_BRIDGE=y
+CONFIG_KERNEL_BRIDGE_NETFILTER=y
+#补充部分
+CONFIG_KERNEL_BLK_CGROUP=y
+CONFIG_KERNEL_CPUSETS=y
+CONFIG_PACKAGE_iptables=y
+
 CONFIG_PACKAGE_tmux=y
 CONFIG_PACKAGE_dmesg=y
 CONFIG_PACKAGE_htop=y
@@ -41,36 +80,43 @@ CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_ddns-scripts-cloudflare=y
 CONFIG_PACKAGE_sqm-scripts-nss=y
 
-CONFIG_PACKAGE_luci-theme-aurora=y
-CONFIG_PACKAGE_luci-app-aurora-config=y
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-argon-config=y
+# 主题配置
+CONFIG_PACKAGE_luci-theme-aurora=n
+CONFIG_PACKAGE_luci-app-aurora-config=n
+CONFIG_PACKAGE_luci-theme-argon=n
+CONFIG_PACKAGE_luci-app-argon-config=n
+
+# 常用插件
 CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-wolplus=y
 CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-wifischedule=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
-CONFIG_PACKAGE_luci-app-frps=y
-CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-app-banip=y
-CONFIG_PACKAGE_luci-app-acme=y
-CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
-CONFIG_PACKAGE_luci-app-wechatpush=y
-CONFIG_PACKAGE_luci-app-watchcat=y
-CONFIG_PACKAGE_luci-app-3cat=y
 CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-openlist2=y
+CONFIG_PACKAGE_luci-app-homeproxy=y
+
+# 禁用插件
+CONFIG_PACKAGE_luci-app-wifischedule=n
+CONFIG_PACKAGE_luci-app-uhttpd=n
+CONFIG_PACKAGE_luci-app-frps=n
+CONFIG_PACKAGE_luci-app-frpc=n
+CONFIG_PACKAGE_luci-app-usb-printer=n
+CONFIG_PACKAGE_luci-app-acme=n
+CONFIG_PACKAGE_luci-app-wechatpush=n
+CONFIG_PACKAGE_luci-app-watchcat=n
+CONFIG_PACKAGE_luci-app-3cat=n
+CONFIG_PACKAGE_luci-app-banip=n
+CONFIG_PACKAGE_luci-app-arpbind=n
+CONFIG_PACKAGE_luci-app-upnp=n
+CONFIG_PACKAGE_luci-app-vlmcsd=n
 
 ### PassWall配置项 ###
 
